# btc_bot

./: .env_example  README.md  analyze.py  get_group_id.py  main.py  notifier.py  pyproject.toml  sentiment_scraper.py  trend_scraper.py
data/: history.json
