[project]
name = "btc-bot"
version = "0.1.0"
description = "AI bot to analyze technical trends and sentiment for buy/hold signals"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "python-telegram-bot>=20.5",
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "lxml>=4.9.0"
]
